# twplay

./: README.md  pyproject.toml  rapport.lyx  rapport.lyx~  requirements.txt  setup.py
twitch_VOD_player/: .pre-commit-config.yaml  amqp.py  chat.json  chromecast_player.py  controller.py  main.py  mpv_player.py  player.py  topics.py  utils.py  video_server.py
twitch_VOD_player/twitch_url_retriever/: README.md  pyproject.toml  setup.py  twrec
twitch_VOD_player/twitch_url_retriever/twitch_url_retriever/: helpers.py  main.py
twitch_chat_render/: README.md  pubspec.yaml
twitch_chat_render.app/Contents/: Info.plist
twitch_chat_render.app/Contents/MacOS/: twitch_chat_render
twitch_chat_render.app/Contents/Resources/: Assets.car
twitch_chat_render.app/Contents/_CodeSignature/: CodeResources
twitch_chat_render/android/app/: build.gradle
twitch_chat_render/ios/Runner/: Info.plist
twitch_chat_render/ios/Runner.xcodeproj/: project.pbxproj
twitch_chat_render/json/: chat.json
twitch_chat_render/lib/: main.dart
twitch_chat_render/lib/models/: app_status.dart  chat_model.dart
twitch_chat_render/lib/pages/: chat.dart  home.dart  ip_setup.dart  loading.dart
twitch_chat_render/lib/widgets/: chat.dart  (+10 more)
twitch_chat_render/linux/: CMakeLists.txt  my_application.cc
twitch_chat_render/test/: widget_test.dart
twitch_chat_render/web/: index.html  manifest.json
twitch_chat_render/windows/: CMakeLists.txt
twplay/: mix.exs
twplay/config/: config.exs
twplay/lib/: chat_renderer.ex  chat_retriever.ex  mpv_player.ex  player.ex  rabbit_mq.ex  twitch.ex  utils.ex
(+37 files in other folders)
