[tool.poetry]
name = "twplay"
version = "0.1.0"
description = ""
authors = ["Nassim <abdelghani.nassim@gmail.com>"]
readme = "README.md"
packages = [{include = "twitch_VOD_player"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask-Cors = "^3.0.10"
pika = "^1.3.1"
PyChromecast = {git = "https://github.com/n18abdel/pychromecast.git"}
pynput = "^1.7.6"
python-mpv-jsonipc = {git = "https://github.com/n18abdel/python-mpv-jsonipc.git"}
twitch_url_retriever = { path = "twitch_VOD_player/twitch_url_retriever/", develop = false }

[tool.poetry.scripts]
twplay = "twitch_VOD_player.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
